--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "eslint": "^6.1.0",
+    "form-data": "^2.5.0",
     "jquery": "^3.4.1",
+    "qs": "^6.7.0",
     "react": "^16.9.0",
     "react-axios": "^2.0.3",
     "react-bootstrap": "^1.0.0-beta.11",
