--- a/package.json
+++ b/package.json
@@ -5,17 +5,23 @@
   "dependencies": {
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
+    "codemirror": "^5.48.2",
+    "cytoscape": "^3.9.0",
     "eslint": "^6.1.0",
     "form-data": "^2.5.0",
     "jquery": "^3.4.1",
     "qs": "^6.7.0",
+    "query-string": "^6.8.2",
     "react": "^16.9.0",
     "react-axios": "^2.0.3",
     "react-bootstrap": "^1.0.0-beta.11",
+    "react-codemirror2": "^6.0.0",
+    "react-cytoscapejs": "^1.2.0",
     "react-dom": "^16.9.0",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.1.0"
+    "react-scripts": "3.1.0",
+    "yasgui-yasqe": "^2.11.22"
   },
   "scripts": {
     "start": "react-scripts start",
