--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "eslint": "^6.1.0",
     "form-data": "^2.5.0",
     "jquery": "^3.4.1",
+    "prop-types": "^15.7.2",
     "qs": "^6.7.0",
     "query-string": "^6.8.2",
     "react": "^16.9.0",
@@ -21,6 +22,7 @@
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.0",
+    "viz.js": "^2.1.2",
     "yasgui-yasqe": "^2.11.22"
   },
   "scripts": {
