--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-codemirror2": "^6.0.0",
     "react-cytoscapejs": "^1.2.0",
     "react-dom": "^16.9.0",
+    "react-pace-progress": "^2.0.0",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.0",
