--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "rdfshape-client",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://labra.github.io/rdfshape-client",
   "dependencies": {
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
@@ -9,6 +10,7 @@
     "cytoscape": "^3.9.0",
     "eslint": "^6.1.0",
     "form-data": "^2.5.0",
+    "gh-pages": "^2.1.1",
     "jquery": "^3.4.1",
     "prop-types": "^15.7.2",
     "qs": "^6.7.0",
@@ -27,6 +29,8 @@
     "yasgui-yasqe": "^2.11.22"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",        
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
