--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^16.9.0",
     "react-axios": "^2.0.3",
     "react-bootstrap": "^1.0.0-beta.11",
+    "react-bootstrap-table-next": "^3.1.8",
     "react-codemirror2": "^6.0.0",
     "react-cytoscapejs": "^1.2.0",
     "react-dom": "^16.9.0",
@@ -25,7 +26,8 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.0",
     "viz.js": "^2.1.2",
-    "yasgui-yasqe": "^2.11.22"
+    "yasgui-yasqe": "^2.11.22",
+    "yashe": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
