--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-bootstrap": "^1.0.0-beta.11",
     "react-bootstrap-table-next": "^3.1.8",
     "react-codemirror2": "^6.0.0",
+    "react-color": "^2.17.3",
     "react-cytoscapejs": "^1.2.0",
     "react-dom": "^16.9.0",
     "react-pace-progress": "^2.0.0",
