--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bootstrap": "^4.3.1",
     "codemirror": "^5.48.2",
     "cytoscape": "^3.9.0",
+    "cytoscape-node-html-label": "^1.1.3",
     "eslint": "^6.1.0",
     "form-data": "^2.5.0",
     "gh-pages": "^2.1.1",
