--- a/package.json
+++ b/package.json
@@ -5,31 +5,32 @@
   "dependencies": {
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
-    "codemirror": "^5.48.2",
-    "cytoscape": "^3.9.0",
-    "cytoscape-node-html-label": "^1.1.3",
-    "eslint": "^6.4.0",
-    "form-data": "^2.5.0",
+    "codemirror": "^5.49.0",
+    "cytoscape": "^3.11.0",
+    "cytoscape-node-html-label": "^1.1.5",
+    "eslint": "^6.5.1",
+    "form-data": "^2.5.1",
     "gh-pages": "^2.1.1",
     "jquery": "^3.4.1",
+    "perfectkb-yate": "^0.9.2",
     "prop-types": "^15.7.2",
-    "qs": "^6.7.0",
-    "query-string": "^6.8.2",
-    "react": "^16.9.0",
+    "qs": "^6.9.0",
+    "query-string": "^6.8.3",
+    "react": "^16.10.2",
     "react-axios": "^2.0.3",
-    "react-bootstrap": "^1.0.0-beta.11",
-    "react-bootstrap-table-next": "^3.1.8",
+    "react-bootstrap": "^1.0.0-beta.14",
+    "react-bootstrap-table-next": "^3.2.1",
     "react-codemirror2": "^6.0.0",
     "react-color": "^2.17.3",
     "react-cytoscapejs": "^1.2.0",
-    "react-dom": "^16.9.0",
+    "react-dom": "^16.10.2",
     "react-pace-progress": "^2.0.0",
-    "react-router": "^5.0.1",
-    "react-router-dom": "^5.0.1",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.1.0",
     "viz.js": "^2.1.2",
     "yasgui-yasqe": "^2.11.22",
-    "yashe": "^1.1.2"
+    "yashe": "^1.1.12"
   },
   "scripts": {
     "start": "react-scripts start",
