Added wikidata search options

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-axios": "^2.0.3",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-bootstrap-table-next": "^3.2.1",
+    "react-bootstrap-typeahead": "^3.4.7",
     "react-codemirror2": "^6.0.0",
     "react-color": "^2.17.3",
     "react-cytoscapejs": "^1.2.0",
