--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-color": "^2.17.3",
     "react-cytoscapejs": "^1.2.0",
     "react-dom": "^16.10.2",
+    "react-open-iconic-svg": "^3.0.1",
     "react-pace-progress": "^2.0.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
