--- a/package.json
+++ b/package.json
@@ -56,7 +56,9 @@
     ]
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^4.2.3",
-    "@testing-library/react": "^9.3.2"
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/react-hooks": "^3.2.1",
+    "react-test-renderer": "^16.12.0"
   }
 }
