--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-scripts": "3.1.0",
     "viz.js": "^2.1.2",
     "yasgui-yasqe": "^2.11.22",
-    "yashe": "^1.1.13"
+    "yashe": "^1.1.13",
+    "@testing-library/dom": "latest"
   },
   "scripts": {
     "start": "react-scripts start",
