--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@testing-library/dom": "latest",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "codemirror": "^5.49.0",
@@ -32,8 +33,7 @@
     "react-scripts": "3.1.0",
     "viz.js": "^2.1.2",
     "yasgui-yasqe": "^2.11.22",
-    "yashe": "^1.1.13",
-    "@testing-library/dom": "latest"
+    "yashe": "^1.2.6"
   },
   "scripts": {
     "start": "react-scripts start",
