--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,8 @@ node_js:
   - "12"
 cache: yarn
 script:
-  - echo 'Build starts!!'
-  - echo 'Installing Deps!'
+  - echo 'Build starts'
+  - echo 'Installing dependencies'
   - yarn
-  - echo 'Testing!'
+  - echo 'Testing with npm test'
   - npm run test
