--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "bootstrap": "^4.3.1",
     "codemirror": "^5.52.2",
     "cytoscape": "^3.11.0",
+    "cytoscape-dagre": "^2.3.0",
     "cytoscape-node-html-label": "^1.1.5",
+    "cytoscape-panzoom": "^2.5.3",
     "eslint": "^6.5.1",
     "form-data": "^2.5.1",
     "gh-pages": "^2.1.1",
