--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "yashe": "^1.2.22"
   },
   "scripts": {
-    "start": "react-scripts --max_old_space_size=4096 start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
