--- a/package.json
+++ b/package.json
@@ -3,42 +3,42 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^0.19.0",
-    "bootstrap": "^4.3.1",
-    "codemirror": "^5.52.2",
-    "cytoscape": "^3.11.0",
-    "cytoscape-dagre": "^2.3.0",
-    "cytoscape-node-html-label": "^1.1.5",
+    "axios": "^0.19.2",
+    "bootstrap": "^4.5.3",
+    "codemirror": "^5.58.2",
+    "cytoscape": "^3.16.3",
+    "cytoscape-dagre": "^2.3.1",
+    "cytoscape-node-html-label": "^1.2.1",
     "cytoscape-panzoom": "^2.5.3",
     "eslint": "^6.5.1",
     "form-data": "^2.5.1",
-    "gh-pages": "^2.1.1",
+    "gh-pages": "^2.2.0",
     "jquery": "^3.5.1",
     "npm": "^6.14.5",
     "perfectkb-yate": "^0.9.2",
     "prop-types": "^15.7.2",
-    "qs": "^6.9.0",
-    "query-string": "^6.8.3",
-    "react": "^16.12.0",
+    "qs": "^6.9.4",
+    "query-string": "^6.13.6",
+    "react": "^16.14.0",
     "react-axios": "^2.0.3",
-    "react-bootstrap": "^1.0.0-beta.16",
-    "react-bootstrap-table-next": "^3.2.1",
+    "react-bootstrap": "^1.4.0",
+    "react-bootstrap-table-next": "^3.3.5",
     "react-bootstrap-typeahead": "^3.4.7",
     "react-codemirror2": "^6.0.1",
-    "react-color": "^2.17.3",
+    "react-color": "^2.19.3",
     "react-cytoscapejs": "^1.2.0",
-    "react-dom": "^16.10.2",
+    "react-dom": "^16.14.0",
     "react-open-iconic-svg": "^3.0.1",
     "react-pace-progress": "^2.0.0",
-    "react-router": "^5.1.2",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.4.1",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^3.4.4",
     "react-toastify": "^6.0.5",
     "react-tooltip": "^4.2.10",
     "shumlex": "^0.2.2",
     "viz.js": "^2.1.2",
     "yasgui-yasqe": "^2.11.22",
-    "yashe": "^1.2.22"
+    "yashe": "^1.3.9"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -62,10 +62,10 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/dom": "^6.16.0",
     "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.4.0",
-    "@testing-library/react-hooks": "^3.2.1",
-    "react-test-renderer": "^16.12.0",
-    "@testing-library/dom": "^6.11.0"
+    "@testing-library/react": "^9.5.0",
+    "@testing-library/react-hooks": "^3.4.2",
+    "react-test-renderer": "^16.14.0"
   }
 }
