--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-tooltip": "^4.2.11",
     "shumlex": "^0.2.2",
     "viz.js": "^2.1.2",
+    "xml-formatter": "^2.4.0",
     "yasgui-yasqe": "^2.11.22",
     "yashe": "^1.3.11"
   },
