--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@weso/yashe": "^1.3.21",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.3",
     "codemirror": "^5.59.0",
@@ -39,7 +38,8 @@
     "shumlex": "^0.2.2",
     "viz.js": "^2.1.2",
     "xml-formatter": "^2.4.0",
-    "yasgui-yasqe": "^2.11.22"
+    "yasgui-yasqe": "^2.11.22",
+    "yashe": "^1.3.21"
   },
   "scripts": {
     "start": "react-scripts start",
