--- a/package.json
+++ b/package.json
@@ -35,13 +35,13 @@
     "react-scripts": "^3.4.4",
     "react-toastify": "^6.1.0",
     "react-tooltip": "^4.2.10",
-    "shumlex": "^0.2.2",
+    "shumlex": "^0.3.4",
     "viz.js": "^2.1.2",
     "yasgui-yasqe": "^2.11.22",
     "yashe": "^1.3.9"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts --max_old_space_size=4096 start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
