--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "yashe": "^1.3.21"
   },
   "scripts": {
-    "start": "react-scripts  --max_old_space_size=4096 start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
