--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.4",
-    "react-toastify": "^6.2.0",
+    "react-toastify": "^7.0.3",
     "react-tooltip": "^4.2.11",
     "shumlex": "^0.4.2",
     "viz.js": "^2.1.2",
@@ -64,6 +64,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.13.10",
     "@testing-library/dom": "^6.16.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
