--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,15 @@
 # production
 /build
 
+# Code
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
+.history/
+
 # misc
 .DS_Store
 .env.local
