--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -7,10 +7,12 @@ on:
   push:
     branches:
       - main
+      - master
   # Trigger on PR merging to main
   pull_request:
     branches:
       - main
+      - master
 
 jobs:
   test:
