--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -3,19 +3,18 @@ on:
   # Manual trigger
   workflow_dispatch:
 
-  # Trigger on push to main
   push:
     branches:
       - main
       - master
-  # Trigger on PR merging to main
+
   pull_request:
     branches:
       - main
       - master
 
 jobs:
-  test:
+  build_and_test:
     name: Build and test the application
     runs-on: ubuntu-latest
     steps:
