--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "dependencies": {
     "axios": "^0.21.4",
-    "bootstrap": "^4.5.3",
-    "codemirror": "^5.63.3",
+    "bootstrap": "^4.6.1",
+    "codemirror": "^5.64.0",
     "cytoscape": "^3.20.0",
     "cytoscape-dagre": "^2.3.2",
     "cytoscape-node-html-label": "^1.2.1",
@@ -24,6 +24,8 @@
     "react-axios": "^2.0.4",
     "react-bootstrap": "^1.6.4",
     "react-bootstrap-table-next": "^3.3.5",
+    "react-bootstrap-table2-paginator": "^2.1.2",
+    "react-bootstrap-table2-toolkit": "^2.1.3",
     "react-bootstrap-typeahead": "^3.4.7",
     "react-codemirror2": "^6.0.1",
     "react-color": "^2.19.3",
@@ -64,7 +66,7 @@
     ]
   },
   "devDependencies": {
-    "@babel/core": "^7.15.8",
+    "@babel/core": "^7.16.0",
     "@testing-library/dom": "^6.16.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
