Integrating streaming validations into UI/UX

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-scripts": "^3.4.4",
     "react-toastify": "^7.0.3",
     "react-tooltip": "^4.2.21",
+    "react-use-websocket": "^3.0.0",
     "shumlex": "^0.6.5",
     "viz.js": "^2.1.2",
     "xml-formatter": "^2.6.1",
