--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 REACT_APP_RDFSHAPE_HOST=https://api.rdfshape.weso.es
-REACT_APP_VERSION=0.2
+REACT_APP_RDFSHAPE_WS_HOST=wss://api.rdfshape.weso.es
+REACT_APP_VERSION=0.2.10
