--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,3 @@
 REACT_APP_RDFSHAPE_HOST=http://localhost:8080
-REACT_APP_VERSION=0.2
+REACT_APP_RDFSHAPE_WS_HOST=ws://localhost:8080
+REACT_APP_VERSION=0.2.10
