--- a/package.json
+++ b/package.json
@@ -47,8 +47,8 @@
     "yashe": "^1.3.22"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "react-scripts --openssl-legacy-provider start",
+    "build": "react-scripts --openssl-legacy-provider build",
     "test": "react-scripts test --passWithNoTests",
     "eject": "react-scripts eject"
   },
